--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 html(lang="en")
-head
-  meta(charset="UTF-8")
-  title Document
-body
-  h1 Main Template
-
-  section.content
+  head
+    meta(charset="UTF-8")
+    title Document
+    block head
+  body
     block content
