--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -5,4 +5,26 @@ html(lang="en")
     title Document
     block head
   body
+    include cross_link_teaser
+    header.main-header
+      div.overlay
+      nav.meta
+        ul
+          li
+            a über mich
+          li
+            a impressum
+
+      picture
+        source(srcset="/images/landing-page-bg-1380.png" media="(min-width: 1200px)")
+        source(srcset="/images/landing-page-bg-1024.png" media="(min-width: 640px)")
+        img( src="/images/landing-page-bg-640.png" alt="")
+
+      .central-teaser
+        h1 Andreas Niehues
+        p.sub-title
+          | Systemisch integrative Praxis für Paar- und Familientherapie,
+          br
+          | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+
     block content
