--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -3,7 +3,9 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     title Document
-    block head
+    link(rel='stylesheet' href='http://localhost:8235/css/main.css')
+
+    //- block head
   body
     include cross_link_teaser
     header.main-header
