--- a/styles/components/meta-nav/index.styl
+++ b/styles/components/meta-nav/index.styl
@@ -10,11 +10,12 @@
   li
     display inline-block
     margin-left 1.5rem
+
+  a
+    color #fff
+    text-decoration none
     padding .5rem 1rem
 
     &:hover
       background-color #fff
       color #000
-
-  a
-    color #fff
