--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -1,4 +1,4 @@
-teaser-border-radius = 2px
+teaser-border-radius = 3px
 .teaser
   list-style-type none
   float left
@@ -6,10 +6,11 @@ teaser-border-radius = 2px
 
   background-color #fff
   border 1px solid rgb(237, 237, 237)
-  // border-bottom-width 2px
+  border-bottom-width 2px
   border-bottom-color rgb(227, 227, 227)
   border-radius teaser-border-radius
   overflow hidden
+
 
   a
     position relative
