--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -1,16 +1,17 @@
-teaser-border-radius = 3px
+teaser-border-radius = 2px
 .teaser
   list-style-type none
   float left
-  // min-height 300px
 
   background-color #fff
   border 1px solid rgb(237, 237, 237)
-  border-bottom-width 2px
+  // border-bottom-width 2px
   border-bottom-color rgb(227, 227, 227)
   border-radius teaser-border-radius
   overflow hidden
 
+  &:hover
+    box-shadow 0 0 30px rgb(209, 209, 209)
 
   a
     position relative
@@ -18,18 +19,64 @@ teaser-border-radius = 3px
     min-height 100%
     width 100%
     z-index 1001
-    font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
-    font-size 1.5rem
     text-decoration none
-    text-align center
     margin-bottom 1rem
+
+    &:hover
+      .img-container
+        min-height 100px
+
+      .label
+        min-height 130px
+
+      .more
+        visibility visible
+        opacity 1
+        transform translateX(-50%)
+
+  .label
+    min-height 32px
+    display block
+    width 100%
+    background-color #fff
+    transition min-height .5s
+    position relative
+
+    .text
+      display block
+      font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
+      font-size 1.5rem
+      text-align center
+
+    .more
+      visibility hidden
+      opacity 0
+      transition opacity .5s ease-in
+      background-color #acb5ba
+      color #fff
+      padding .5rem 1rem
+      cursor pointer
+
+      display block
+      position absolute
+      bottom 2rem
+      left 50%
+      white-space nowrap
+
+      &:before
+        @extend .ion-ios-arrow-forward:before
+        font-weight bold
+        margin-right .5rem
+
 
   .img-container
     min-height 200px
     background-size cover
-    background-position center right
+    background-position center center
+
     position relative
     margin-bottom 1rem
+    transition min-height .5s
 
 .teaser-couples .img-container
   background-image url(../images/couple_small.png)
@@ -39,3 +86,6 @@ teaser-border-radius = 3px
 
 .teaser-family .img-container
   background-image url(../images/family_small.png)
+
+.teaser-corporations .img-container
+  background-image url(../images/corporation_small.png)
