--- a/styles/globals/defaults.styl
+++ b/styles/globals/defaults.styl
@@ -1,5 +1,6 @@
 body, html
-  font-family open_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-family open_sanslight, 'Helvetica Neue', Helvetica, arial, sans-serif
+
   height 100%
 
 a
