--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -29,4 +29,8 @@ html(lang="en")
           br
           | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
 
-    block content
+
+    section.content
+      block content
+
+      include about_me
