--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -12,7 +12,7 @@ html(lang="en")
       div.overlay
       nav.meta
         ul
-          li
+          li.meta-about-me
             a über mich
           li
             a impressum
