--- a/styles/components/markdown/index.styl
+++ b/styles/components/markdown/index.styl
@@ -5,6 +5,7 @@
     font-weight normal
 
   h3
+    padding-top 2rem
     font-size 2.2rem
     margin-bottom 1.5rem
     font-weight normal
@@ -27,7 +28,7 @@
 
   p, li
     line-height 2.5rem
-    margin-bottom 1.5rem
+    margin-bottom 1rem
     font-size 1.3rem
 
   strong
