--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -4,7 +4,7 @@
   :markdown-it
     ## Über mich
 
-    ### Mein Hintergrund:
+    ### Mein Hintergrund
 
     seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
 
@@ -12,3 +12,31 @@
     * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
     * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
     * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
+
+  .references
+    .qualifications
+      :markdown-it
+        ### Meine Qualifikationen
+
+        * systemisch integrativer Paartherapeut (Hans-Jellouschek-Institut)
+        * Ausbildung  zur Kinderschutzfachkraft (Kinderschutzbund)
+        * Weiterbildung zum systemischen Familientherapeuten (I.a.d.R.)
+        * Sexualpädagoge (isp-Dortmund)
+        * Dipl. Sozialarbeiter (KFH NW in Münster)
+        * Studium der nordischen Sprachen (Wilhelmuniversität Münster)
+
+    .qualifications
+      :markdown-it
+        ### Meine Referenzen
+
+        * Diakonie Köln und Region
+        * Christliche Sozialhilfe Köln
+        * Caritasverband für die Stadt Essen e.V.
+        * Diözesancaritasverband Essen
+        * Landeskriminalpolitzei NRW
+        * Bundeszentrale für gesundheitliche Aufklärung
+        * Telefonseelsorge Düsseldorf
+        * Kliniken Essen Mitte
+        * Gute Hand
+        * Arbeiter Samariter Bund Essen
+        * Caritasverband für die Stadt Recklinghausen, e.V.
