--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -1,7 +1,6 @@
 teaser-border-radius = 2px
 .teaser
   list-style-type none
-  float left
 
   background-color #fff
   border 1px solid rgb(237, 237, 237)
@@ -23,11 +22,11 @@ teaser-border-radius = 2px
     margin-bottom 1rem
 
     &:hover
-      .img-container
-        min-height 100px
-
-      .label
-        min-height 130px
+      // .img-container
+      //   min-height 100px
+      //
+      // .label
+      //   min-height 130px
 
       .more
         visibility visible
