--- a/styles/main.styl
+++ b/styles/main.styl
@@ -1,5 +1,6 @@
 @require '/ress/dist/ress.min.css'
 
 @require 'helper/mq-helper'
+@require 'helper/positioning-helper'
 @require 'globals'
 @require 'components'
