--- a/templates/cross_link_teaser.pug
+++ b/templates/cross_link_teaser.pug
@@ -4,7 +4,7 @@ mixin teaser(klass, label, link)
       .img-container
       span.label
         span.text= label
-        button.more.icon.ion-home Mehr Informationen
+        span.more.icon.ion-home Mehr Informationen
 
 
 mixin teaser-list(teasers)
