--- a/styles/components/teasers/index.styl
+++ b/styles/components/teasers/index.styl
@@ -2,29 +2,48 @@
 
 .teasers
   // overflow hidden
-  &:after
-    content ''
-    display table
-    clear both
+  clear-fix()
 
+  li
+    margin-bottom 1rem
 
-  &.teaser-count-2 li
-    width 48%
-    margin-right 1.9%
+  +from(bp-medium)
+    li
+      float left
 
-    &:last-of-type
-      margin-right 0
+  +between(bp-medium, bp-large)
+    &.teaser-count-2, &.teaser-count-3, &.teaser-count-4
+      li
 
-  &.teaser-count-3 li
-    width 31%
-    margin-right 3.45%
+        margin-bottom 1rem
+        width 48%
+        margin-right 3.9%
 
-    &:last-of-type
-      margin-right 0
+        &:nth-child(even)
+          margin-right 0
+          clear-fix()
 
-  &.teaser-count-4 li
-    width 23%
-    margin-right 2.66%
+  +from(bp-large)
+    li
+      margin-bottom 0
 
-    &:last-of-type
-      margin-right 0
+    &.teaser-count-2 li
+      width 48%
+      margin-right 1.9%
+
+      &:last-of-type
+        margin-right 0
+
+    &.teaser-count-3 li
+      width 31%
+      margin-right 3.45%
+
+      &:last-of-type
+        margin-right 0
+
+    &.teaser-count-4 li
+      width 23%
+      margin-right 2.66%
+
+      &:last-of-type
+        margin-right 0
