--- a/styles/globals/defaults.styl
+++ b/styles/globals/defaults.styl
@@ -1,3 +1,7 @@
+bp-small = 400px
+bp-medium = 800px
+bp-large = 1280px
+
 body, html
   font-family open_sanslight, 'Helvetica Neue', Helvetica, arial, sans-serif
 
