--- a/styles/helper/mq-helper.styl
+++ b/styles/helper/mq-helper.styl
@@ -7,5 +7,5 @@ up-to(max-width)
     {block}
 
 between(min-width, max-width)
-  @media screen and (min-width: min-width) and (max-width: min-width)
+  @media screen and (min-width: min-width) and (max-width: max-width)
     {block}
