--- a/styles/components/about-me/index.styl
+++ b/styles/components/about-me/index.styl
@@ -4,8 +4,11 @@
   min-height 300px
   background-color rgb(110, 110, 110)
   position relative
-  padding 7rem 5rem
+  padding 7rem 2rem
   color #fff
+
+  +from(bp-medium)
+    padding 7rem 5rem
 
   @extend .markdown
 
