--- a/styles/components/area/index.styl
+++ b/styles/components/area/index.styl
@@ -5,3 +5,16 @@
   padding 3rem 0
 
   @extend .markdown
+
+  +up-to(bp-medium)
+    h2
+      font-size 8vw
+
+    h3
+      font-size 6vw
+
+    li, p
+      font-size 4vw
+
+    li:before
+      top 3vw
