--- a/styles/components/references/index.styl
+++ b/styles/components/references/index.styl
@@ -1,6 +1,7 @@
 .references
   overflow hidden
 
-.qualifications
-  float left
-  width 50%
++from(bp-medium)
+  .qualifications
+    float left
+    width 50%
