--- a/styles/components/about-me/index.styl
+++ b/styles/components/about-me/index.styl
@@ -1,11 +1,15 @@
 @require '../markdown'
 
+.about-me-wrapper
+  padding-top 4rem
+
 .about-me
   min-height 300px
   background-color rgb(110, 110, 110)
   position relative
   padding 7rem 2rem
   color #fff
+  margin-top 5rem
 
   +from(bp-medium)
     padding 7rem 5rem
