--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -1,42 +1,43 @@
-.about-me
-  div.avatar
+.about-me-wrapper
+  .about-me
+    div.avatar
 
-  :markdown-it
-    ## Über mich
+    :markdown-it
+      ## Über mich
 
-    ### Mein Hintergrund
+      ### Mein Hintergrund
 
-    seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
+      seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
 
-    *	Fortbildner im Bereich kindliche Sexualentwicklung, Kindeswohlgefährdung und Jugendsexualität
-    * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
-    * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
-    * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
+      *	Fortbildner im Bereich kindliche Sexualentwicklung, Kindeswohlgefährdung und Jugendsexualität
+      * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
+      * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
+      * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
 
-  .references
-    .qualifications
-      :markdown-it
-        ### Meine Qualifikationen
+    .references
+      .qualifications
+        :markdown-it
+          ### Meine Qualifikationen
 
-        * systemisch integrativer Paartherapeut (Hans-Jellouschek-Institut)
-        * Ausbildung  zur Kinderschutzfachkraft (Kinderschutzbund)
-        * Weiterbildung zum systemischen Familientherapeuten (I.a.d.R.)
-        * Sexualpädagoge (isp-Dortmund)
-        * Dipl. Sozialarbeiter (KFH NW in Münster)
-        * Studium der nordischen Sprachen (Wilhelmuniversität Münster)
+          * systemisch integrativer Paartherapeut (Hans-Jellouschek-Institut)
+          * Ausbildung  zur Kinderschutzfachkraft (Kinderschutzbund)
+          * Weiterbildung zum systemischen Familientherapeuten (I.a.d.R.)
+          * Sexualpädagoge (isp-Dortmund)
+          * Dipl. Sozialarbeiter (KFH NW in Münster)
+          * Studium der nordischen Sprachen (Wilhelmuniversität Münster)
 
-    .qualifications
-      :markdown-it
-        ### Meine Referenzen
+      .qualifications
+        :markdown-it
+          ### Meine Referenzen
 
-        * Diakonie Köln und Region
-        * Christliche Sozialhilfe Köln
-        * Caritasverband für die Stadt Essen e.V.
-        * Diözesancaritasverband Essen
-        * Landeskriminalpolitzei NRW
-        * Bundeszentrale für gesundheitliche Aufklärung
-        * Telefonseelsorge Düsseldorf
-        * Kliniken Essen Mitte
-        * Gute Hand
-        * Arbeiter Samariter Bund Essen
-        * Caritasverband für die Stadt Recklinghausen, e.V.
+          * Diakonie Köln und Region
+          * Christliche Sozialhilfe Köln
+          * Caritasverband für die Stadt Essen e.V.
+          * Diözesancaritasverband Essen
+          * Landeskriminalpolitzei NRW
+          * Bundeszentrale für gesundheitliche Aufklärung
+          * Telefonseelsorge Düsseldorf
+          * Kliniken Essen Mitte
+          * Gute Hand
+          * Arbeiter Samariter Bund Essen
+          * Caritasverband für die Stadt Recklinghausen, e.V.
