--- a/styles/components/area/index.styl
+++ b/styles/components/area/index.styl
@@ -3,17 +3,19 @@
 .area
   margin 6rem 0
 
+  &:first-of-type
+    margin-top 0
+
   @extend .markdown
 
   +up-to(bp-medium)
     h2
-      font-size 8vw
+      font-size 6vw
+      margin-bottom .5em
 
     h3
       font-size 6vw
 
     li, p
       font-size 4vw
-
-    li:before
-      top 3vw
+      line-height 1.6
