--- a/styles/components/markdown/index.styl
+++ b/styles/components/markdown/index.styl
@@ -19,7 +19,7 @@
     &:before
       position absolute
       left 0
-      top .5rem
+      top .5em
       width 1.5rem
       height 1.5rem
       padding-left .5rem
