--- a/styles/components/content/index.styl
+++ b/styles/components/content/index.styl
@@ -1,7 +1,10 @@
 .content
-  width 90%
-  padding .5rem
   margin 0 auto
+  padding 1.5rem
 
   +from(bp-medium)
-    padding .5rem
+    width 90%
+
+  +from(bp-large)
+    width 90%
+    padding 3.5rem
