--- a/templates/couples_layout.pug
+++ b/templates/couples_layout.pug
@@ -9,26 +9,31 @@ html(lang="en")
   body
     include cross_link_teaser
 
-    header.main-header
-      div.overlay
-      nav.meta
-        ul
-          li.meta-about-me
-            a über mich
-          li
-            a impressum
+    header.sub-header
+      nav.main-nav
+        .title-brand Andreas Niehues
 
-      picture
-        source(srcset=ASSET_HOST + "/images/landing-page-bg-1380.png" media="(min-width: 1200px)")
-        source(srcset=ASSET_HOST + "/images/landing-page-bg-1024.png" media="(min-width: 640px)")
-        img( src=ASSET_HOST + "/images/landing-page-bg-640.png" alt="")
+        //- nav.meta
+        //-   ul
+        //-     li.meta-about-me
+        //-       a über mich
+        //-     li
+        //-       a impressum
 
-      .central-teaser
-        h1 Andreas Niehues
-        p.sub-title
-          | Systemisch integrative Praxis für Paar- und Familientherapie,
-          br
-          | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+      .image-teaser
+        div.overlay
+        picture
+          source(srcset=ASSET_HOST + "/images/couples-bg-1380.png" media="(min-width: 1200px)")
+          source(srcset=ASSET_HOST + "/images/couples-bg-1024.png" media="(min-width: 640px)")
+          img(src=ASSET_HOST + "/images/couples-bg-640.png" alt="")
+
+        .central-teaser
+          h1 Paartherapie
+          p.sub-title
+            | Systemisch integrative Praxis für Paar- und Familientherapie,
+            br
+            | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+
 
 
     section.content
