--- a/styles/components/sub-header/index.styl
+++ b/styles/components/sub-header/index.styl
@@ -17,7 +17,11 @@
   // height 600px
   overflow hidden
 
+  .overlay
+    bottom 5px
+
   img
+    width 100%
     max-width 100%
 
   .central-teaser
