--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -3,14 +3,11 @@ teaser-border-radius = 2px
   list-style-type none
 
   background-color #fff
-  border 1px solid rgb(237, 237, 237)
+  // border 1px solid rgb(237, 237, 237)
   // border-bottom-width 2px
-  border-bottom-color rgb(227, 227, 227)
-  border-radius teaser-border-radius
+  // border-bottom-color rgb(227, 227, 227)
+  // border-radius teaser-border-radius
   overflow hidden
-
-  &:hover
-    box-shadow 0 0 30px rgb(209, 209, 209)
 
   a
     position relative
@@ -21,52 +18,40 @@ teaser-border-radius = 2px
     text-decoration none
     margin-bottom 1rem
 
-    &:hover
-      // .img-container
-      //   min-height 100px
-      //
-      // .label
-      //   min-height 130px
+    .overlay
+      visibility hidden
+      background-color text-highlight
+      position absolute
+      top 0
+      right 0
+      bottom 0
+      left 0
+      z-index 1003
+      opacity 0
+      transition opacity .5s
 
-      .more
+    &:hover
+      .overlay
         visibility visible
         opacity 1
-        transform translateX(-50%)
+
+      .label
+        background-color transparent
+        box-shadow none
 
   .label
-    min-height 32px
-    display block
-    width 100%
-    background-color #fff
-    transition min-height .5s
-    position relative
-
-    .text
-      display block
-      font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
-      font-size 1.5rem
-      text-align center
-
-    .more
-      visibility hidden
-      opacity 0
-      transition opacity .5s ease-in
-      background-color #acb5ba
-      color #fff
-      padding .5rem 1rem
-      cursor pointer
-
-      display block
-      position absolute
-      bottom 2rem
-      left 50%
-      white-space nowrap
-
-      &:before
-        @extend .ion-ios-arrow-forward:before
-        font-weight bold
-        margin-right .5rem
-
+    font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-size 1.5rem
+    text-align center
+    position absolute
+    bottom 1rem
+    left 50%
+    transform translateX(-50%)
+    color #fff
+    z-index 1004
+    background-color text-highlight
+    box-shadow .5rem 0 0 text-highlight, -.5rem 0 0 text-highlight
+    padding-top .3rem
 
   .img-container
     min-height 200px
