--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -24,10 +24,7 @@ html(lang="en")
 
       .central-teaser
         h1 Andreas Niehues
-        p.sub-title
-          | Systemisch integrative Praxis für Paar- und Familientherapie,
-          br
-          | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+        p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
 
 
     section.content
