--- a/styles/components/markdown/index.styl
+++ b/styles/components/markdown/index.styl
@@ -36,3 +36,8 @@
 
   em
     font-family open_sansitalic, 'Helvetica Neue', Helvetica, arial, sans-serif
+
+  a
+    &:before
+      margin-right .3rem
+      @extend .ion-ios-link:before
