--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -17,10 +17,11 @@ teaser-border-radius = 2px
     z-index 1001
     text-decoration none
     margin-bottom 1rem
+    border-bottom 0
 
     .overlay
       visibility hidden
-      background-color text-highlight
+      background-color rgba(228, 0, 0, 0.36)
       position absolute
       top 0
       right 0
