--- a/styles/globals/defaults.styl
+++ b/styles/globals/defaults.styl
@@ -8,8 +8,9 @@ body, html
   height 100%
 
 a
-  color #000
-  text-decoration underline
+  color link-color
+  text-decoration none
+  border-bottom 1px solid link-color
 
   &:hover
-    text-decoration none
+    border-bottom none
