--- a/styles/components/about-me/index.styl
+++ b/styles/components/about-me/index.styl
@@ -1,15 +1,19 @@
 @require '../markdown'
 
+about-me-bg = #212d28
+
 .about-me-wrapper
   padding-top 4rem
 
 .about-me
   min-height 300px
-  background-color rgb(110, 110, 110)
   position relative
   padding 7rem 2rem
   color #fff
   margin-top 5rem
+  background-color about-me-bg
+  background-image url(../images/blurred-bg.png)
+  background-size 100%
 
   +from(bp-medium)
     padding 7rem 5rem
