--- a/styles/main.styl
+++ b/styles/main.styl
@@ -2,5 +2,6 @@
 
 @require 'helper/mq-helper'
 @require 'helper/positioning-helper'
+@require 'helper/layout-helper'
 @require 'globals'
 @require 'components'
