--- a/styles/components/references/index.styl
+++ b/styles/components/references/index.styl
@@ -1,7 +1,7 @@
-.references
-  overflow hidden
-
-+from(bp-medium)
-  .qualifications
-    float left
-    width 50%
+// .references
+//   overflow hidden
+//
+// +from(bp-medium)
+//   .qualifications
+//     float left
+//     width 50%
