--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -1,21 +1,23 @@
 .about-me-wrapper
-  .about-me
-    div.avatar
+  section.about-me
+    header
+      div.avatar
+      h2 Andreas Niehues // Über mich
 
-    :markdown-it
-      ## Über mich
 
-      ### Mein Hintergrund
+    .background
+      :markdown-it
+        ### Mein Hintergrund
 
-      seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
+        seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
 
-      *	Fortbildner im Bereich kindliche Sexualentwicklung, Kindeswohlgefährdung und Jugendsexualität
-      * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
-      * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
-      * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
+        *	Fortbildner im Bereich kindliche Sexualentwicklung, Kindeswohlgefährdung und Jugendsexualität
+        * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
+        * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
+        * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
 
     .references
-      .qualifications
+      .reference-list
         :markdown-it
           ### Meine Qualifikationen
 
@@ -26,7 +28,7 @@
           * Dipl. Sozialarbeiter (KFH NW in Münster)
           * Studium der nordischen Sprachen (Wilhelmuniversität Münster)
 
-      .qualifications
+      .reference-list
         :markdown-it
           ### Meine Referenzen
 
