--- a/styles/components/content/index.styl
+++ b/styles/components/content/index.styl
@@ -1,10 +1,6 @@
 .content
   margin 0 auto
-  padding 1.5rem
-
-  +from(bp-medium)
-    width 90%
+  padding 1.5rem 0
 
   +from(bp-large)
-    width 90%
-    padding 3.5rem
+    padding 3.5rem 0
