--- a/styles/components/area/index.styl
+++ b/styles/components/area/index.styl
@@ -3,12 +3,16 @@
 .area
   margin 6rem 0
 
+  container()
+
   &:first-of-type
     margin-top 0
 
   @extend .markdown
 
   +up-to(bp-small)
+    margin 2rem 0
+
     h2
       font-size 6vw
       margin-bottom .5em
