--- a/styles/helper/positioning-helper.styl
+++ b/styles/helper/positioning-helper.styl
@@ -3,3 +3,11 @@ clear-fix()
     content ''
     display table
     clear both
+
+container()
+  margin 0 auto
+  padding-left 1.5rem
+  padding-right 1.5rem
+
+  +from(bp-medium)
+    width 90%
