--- a/styles/components/stretched-hero/index.styl
+++ b/styles/components/stretched-hero/index.styl
@@ -43,8 +43,7 @@
       font-family JaapokkiRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
       font-size 2rem
       text-align center
-      background-color text-highlight
-      box-shadow 1rem 0 0 text-highlight, -1rem 0 0 text-highlight
+      padded-text(text-highlight, 1rem)
       line-height 1.9
       padding-top .5rem
 
