--- a/styles/main.styl
+++ b/styles/main.styl
@@ -3,5 +3,6 @@
 @require 'helper/mq-helper'
 @require 'helper/positioning-helper'
 @require 'helper/layout-helper'
+@require 'helper/text-helper'
 @require 'globals'
 @require 'components'
