--- a/templates/couples_layout.pug
+++ b/templates/couples_layout.pug
@@ -29,10 +29,7 @@ html(lang="en")
 
         .central-teaser
           h1 Paartherapie
-          p.sub-title
-            | Systemisch integrative Praxis für Paar- und Familientherapie,
-            br
-            | Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+          p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
 
 
 
