--- a/styles/components/sub-header/index.styl
+++ b/styles/components/sub-header/index.styl
@@ -11,10 +11,8 @@
     padding 3.5rem
 
 .image-teaser
-  // min-height 400px
   min-width 100%
   position relative
-  // height 600px
   overflow hidden
 
   .overlay
@@ -43,24 +41,32 @@
       margin-top .5rem
       font-family JaapokkiRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
       font-size 1.5rem
-      // text-align center
-      // background-color rgba(37, 37, 37, 0.66)
+      padded-text(text-highlight, 1rem)
+      line-height 1.7
 
 +up-to(bp-medium)
   .image-teaser
+    // position relative
     .central-teaser
-      width 70%
+      position absolute
+
+      bottom 0
+      left 0
+      top auto
+      width 100%
 
       h1
-        font-size 5vw
+        width 100%
+        text-align center
+        font-size 9vw
 
       p.sub-title
         display none
-        // font-size 3vw
 
 +between(bp-medium, bp-large)
   .image-teaser
     .central-teaser
+
       h1
         font-size 4vw
 
