--- a/styles/helper/layout-helper.styl
+++ b/styles/helper/layout-helper.styl
@@ -1,22 +1,34 @@
-expander()
-  display block
-  position absolute
-  bottom 0
-  top 0
-  width 100%
+// expander()
+//   display block
+//   position absolute
+//   bottom 0
+//   top 0
+//   width 100%
+//
+// expanded-bg(color)
+//   background-color color
+//   position relative
+//
+//   &:before, &:after
+//     content ''
+//     background-color color
+//     expander()
+//     z-index -1
+//
+//   &:before
+//     right 100%
+//
+//   &:after
+//     left 100%
 
-expanded-bg(color)
-  background-color color
-  position relative
 
-  &:before, &:after
-    content ''
-    background-color color
-    expander()
-    z-index -1
 
-  &:before
-    right 100%
+container()
+  margin 0 auto
+  padding-left 1.5rem
+  padding-right 1.5rem
+  margin-bottom 1.5rem
 
-  &:after
-    left 100%
+  +from(bp-medium)
+    margin-bottom 3rem
+    width 90%
