--- a/styles/components/contact/index.styl
+++ b/styles/components/contact/index.styl
@@ -8,3 +8,43 @@
 
   .form
     margin-right 1.9%
+
+.address
+  font-style normal
+  font-size 1.5rem
+
+  h3
+    font-size 1.5rem
+    margin-bottom .5rem
+
+    &:first-of-type
+      padding-top 0
+
+.form
+  label
+    display block
+    font-size 1.5rem
+    margin-bottom .5rem
+
+  input, textarea
+    width 100%
+    border 1px solid rgb(209, 209, 209)
+    padding 1rem 1rem
+    outline none
+    margin-bottom 1rem
+
+  textarea
+    min-height 15rem
+
+  input[type="submit"]
+    width auto
+    display inline-block
+    min-width 30%
+
+    &:hover
+      background-color link-highlight-color
+      border-color link-highlight-color
+      color #fff
+
+  .action
+    text-align right
