--- a/styles/components/stretched-hero/index.styl
+++ b/styles/components/stretched-hero/index.styl
@@ -56,6 +56,14 @@
     left 50%
     transform translate(-50%, -50%)
 
++up-to(bp-small)
+  .meta
+    .meta-about-me
+      display none
+
+    .meta-practice
+      display none
+
 +up-to(bp-medium)
   .meta
     .meta-about-me
