--- a/styles/globals/colors.styl
+++ b/styles/globals/colors.styl
@@ -10,4 +10,7 @@ text-highlight = rgba(6, 6, 6, 0.36)
 text-highlight-dark = saturation(alpha(text-highlight, 1), 90%)
 
 link-color = #000
-link-color-hover = link-color
+
+link-highlight-color = rgb(255, 112, 112)
+
+link-color-hover = link-highlight-color
