--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -1,5 +1,5 @@
 .about-me-wrapper
-  section.about-me
+  section.about-me#about-me
     header
       div.avatar
       h2 Andreas Niehues // Über mich
