--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -9,13 +9,16 @@ html(lang="en")
   body
     include cross_link_teaser
     header.main-header
-      div.overlay
       nav.meta
         ul
           li.meta-about-me
-            a über mich
+            a(href="#about-me") über mich
+          li.meta-practice
+            a(href="#practice") praxis
           li
-            a impressum
+            a(href="#contact") kontakt
+          li
+            a(href="#imprint") impressum
 
       picture
         source(srcset=ASSET_HOST + "/images/landing-page-bg-1380.png" media="(min-width: 1200px)")
