--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -33,6 +33,4 @@ html(lang="en")
     section.content
       block content
 
-      include about_me
-      include practice
-      include contact
+      include shared_info
