--- a/styles/components/contact/index.styl
+++ b/styles/components/contact/index.styl
@@ -2,13 +2,6 @@
   container()
   overflow hidden
 
-  .form, .address
-    float left
-    width 49%
-
-  .form
-    margin-right 1.9%
-
 .address
   font-style normal
   font-size 1.5rem
@@ -48,3 +41,15 @@
 
   .action
     text-align right
+
++from(bp-medium)
+  .contact
+    container()
+    overflow hidden
+
+    .form, .address
+      float left
+      width 48%
+
+    .form
+      margin-right 3.9%
