--- a/styles/components/markdown/index.styl
+++ b/styles/components/markdown/index.styl
@@ -10,6 +10,15 @@
     margin-bottom 1.5rem
     font-weight normal
 
+  h4
+    font-family open_sansregular, 'Helvetica Neue', Helvetica, arial, sans-serif
+
+    padding-top 1rem
+    font-size 1.7rem
+    font-weight bold
+    margin-bottom 1rem
+    font-weight normal
+
   li
     margin-bottom .75rem
     list-style-type none
