--- a/templates/cross_link_teaser.pug
+++ b/templates/cross_link_teaser.pug
@@ -13,7 +13,7 @@ mixin teaser-list(teasers)
         when 'couples'
           +teaser(teaser, 'Paare', COUPLES_HOST)
         when 'family'
-          +teaser(teaser, 'Familien', '#')
+          +teaser(teaser, 'Familien', FAMILY_HOST)
         when 'single'
           +teaser(teaser, 'Singles', '#')
         when 'corporations'
