--- a/styles/components/sub-header/index.styl
+++ b/styles/components/sub-header/index.styl
@@ -5,9 +5,10 @@
 
   +from(bp-medium)
     width 90%
+    max-width 1500px
+
 
   +from(bp-large)
-    width 90%
     padding 3.5rem
 
 .image-teaser
