--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -34,3 +34,33 @@ html(lang="en")
       block content
 
       include shared_info
+
+    script(src="https://code.jquery.com/jquery-3.1.0.min.js")
+    script.
+      var host = "pra!?x!is" + "!!-nie!!" + "!hues??" + ".??de"
+      var user = "!i!n?f?o"
+      var address = user+"@"+host
+
+      $('.contact-form').on('submit', function(e) {
+        e.preventDefault();
+
+        var target = $(e.target);
+
+        var data = target.serializeArray().reduce(function(obj, item) {
+          obj[item.name] = item.value;
+          return obj;
+        }, {});
+
+        $.ajax({
+          url: ("https!!!://?!!formspree?!.i?o/" + address).replace(/[\?,\!]/gi, ""),
+          method: "POST",
+          data: data,
+          dataType: "json",
+          success: function() {
+            target.find('.success-message').show()
+          },
+          error: function() {
+            target.find('.error-message').show()
+          }
+        });
+      });
