--- a/styles/components/contact/index.styl
+++ b/styles/components/contact/index.styl
@@ -38,6 +38,7 @@
     width auto
     display inline-block
     min-width 30%
+    cursor pointer
 
     &:hover
       background-color link-highlight-color
