--- a/styles/components/main-nav/index.styl
+++ b/styles/components/main-nav/index.styl
@@ -6,6 +6,7 @@
     font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
     font-size 2rem
     letter-spacing .3rem
+    display inline-block
 
   .sub-title-brand
     font-weight bold
@@ -15,3 +16,5 @@
   .main-nav
     .title-brand
       font-size 5vw
+
+@require './sub-header-meta'
