--- a/styles/components/sub-header/index.styl
+++ b/styles/components/sub-header/index.styl
@@ -11,65 +11,4 @@
   +from(bp-large)
     padding 3.5rem
 
-.image-teaser
-  min-width 100%
-  position relative
-  overflow hidden
-
-  .overlay
-    bottom 5px
-
-  img
-    width 100%
-    max-width 100%
-
-  .central-teaser
-    width 50%
-    position absolute
-    top 50%
-    left 3%
-    transform translateY(-50%)
-    color #fff
-    z-index 1000
-
-    h1
-      // text-align center
-      font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
-      font-size 4rem
-      letter-spacing .3rem
-
-    p.sub-title
-      margin-top .5rem
-      font-family JaapokkiRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
-      font-size 1.5rem
-      padded-text(text-highlight, 1rem)
-      line-height 1.7
-
-+up-to(bp-medium)
-  .image-teaser
-    // position relative
-    .central-teaser
-      position absolute
-
-      bottom 0
-      left 0
-      top auto
-      width 100%
-
-      h1
-        width 100%
-        text-align center
-        font-size 9vw
-
-      p.sub-title
-        display none
-
-+between(bp-medium, bp-large)
-  .image-teaser
-    .central-teaser
-
-      h1
-        font-size 4vw
-
-      p.sub-title
-        font-size 2vw
+@require './image-teaser'
