--- a/styles/helper/layout-helper.styl
+++ b/styles/helper/layout-helper.styl
@@ -33,3 +33,8 @@ container()
     margin-bottom 3rem
     width 90%
     max-width 1280px
+
+  +from(bp-large)
+    margin-bottom 9rem
+    width 90%
+    max-width 1280px
