--- a/templates/couples_layout.pug
+++ b/templates/couples_layout.pug
@@ -1,39 +1,11 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    title Document
-    link(rel='stylesheet' href=ASSET_HOST + "/css/main.css")
+extends /sub_layout
 
-    //- block head
-  body
-    include cross_link_teaser
+block image-teaser
+  picture
+    source(srcset=ASSET_HOST + "/images/couples-bg-1380.png" media="(min-width: 1200px)")
+    source(srcset=ASSET_HOST + "/images/couples-bg-1024.png" media="(min-width: 640px)")
+    img(src=ASSET_HOST + "/images/couples-bg-640.png" alt="")
 
-    header.sub-header
-      nav.main-nav
-        .title-brand Andreas Niehues
-
-        //- nav.meta
-        //-   ul
-        //-     li.meta-about-me
-        //-       a über mich
-        //-     li
-        //-       a impressum
-
-      .image-teaser
-        div.overlay
-        picture
-          source(srcset=ASSET_HOST + "/images/couples-bg-1380.png" media="(min-width: 1200px)")
-          source(srcset=ASSET_HOST + "/images/couples-bg-1024.png" media="(min-width: 640px)")
-          img(src=ASSET_HOST + "/images/couples-bg-640.png" alt="")
-
-        .central-teaser
-          h1 Paartherapie
-          p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
-
-
-
-    section.content
-      block content
-
-      include shared_info
+block central-teaser
+  h1 Paartherapie
+  p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
