--- a/templates/sub_layout.pug
+++ b/templates/sub_layout.pug
@@ -3,7 +3,8 @@ extends /base_layout
 block body
   header.sub-header
     nav.main-nav
-      .title-brand Andreas Niehues
+      .title-brand
+        a(href=HOME_HOST) Andreas Niehues
       include meta_nav
 
     .image-teaser
