--- a/styles/components/main-nav/index.styl
+++ b/styles/components/main-nav/index.styl
@@ -8,6 +8,9 @@
     letter-spacing .3rem
     display inline-block
 
+    a
+      border-bottom 0
+
   .sub-title-brand
     font-weight bold
     width 70%
