--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -17,7 +17,7 @@ teaser-border-radius = 2px
 
     .overlay
       visibility hidden
-      background-color rgba(228, 0, 0, 0.36)
+      background-color text-highlight-dark
       position absolute
       top 0
       right 0
