--- a/templates/singles_layout.pug
+++ b/templates/singles_layout.pug
@@ -2,9 +2,9 @@ extends /sub_layout
 
 block image-teaser
   picture
-    source(srcset=ASSET_HOST + "/images/family-bg-1380.png" media="(min-width: 1200px)")
-    source(srcset=ASSET_HOST + "/images/family-bg-1024.png" media="(min-width: 640px)")
-    img(src=ASSET_HOST + "/images/family-bg-640.png" alt="")
+    source(srcset=ASSET_HOST + "/images/singles-bg-1380.png" media="(min-width: 1200px)")
+    source(srcset=ASSET_HOST + "/images/singles-bg-1024.png" media="(min-width: 640px)")
+    img(src=ASSET_HOST + "/images/singles-bg-640.png" alt="")
 
 block central-teaser
   h1 Einzeltherapie
