added smooth scroll

--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -14,6 +14,7 @@ teaser-border-radius = 2px
     text-decoration none
     margin-bottom 1rem
     border-bottom 0
+    user-select none
 
     .overlay
       visibility hidden
