remove required attribute

--- a/templates/contact.pug
+++ b/templates/contact.pug
@@ -7,10 +7,10 @@
     .validation-message(style="display: none;") Bitte füllen Sie alle Felder entsprechend aus.
 
     label(for="email-address") E-Mail
-    input#email-address(type="email" name="email" required="true" placeholder="email@beispiel.de")
+    input#email-address(type="email" name="email" placeholder="email@beispiel.de")
 
     label(for="content") Nachricht
-    textarea#content(name="content" required="true" placeholder="Ihre Nachricht ...")
+    textarea#content(name="content" placeholder="Ihre Nachricht ...")
     input(type="hidden" name="_format" value="plain")
     input(type="text" name="_gotcha" style="display:none")
 
