--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -11,7 +11,7 @@ block body
 
     .central-teaser
       h1 Andreas Niehues
-      p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+      p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
 
 
   section.content
