--- a/templates/singles_layout.pug
+++ b/templates/singles_layout.pug
@@ -7,5 +7,4 @@ block image-teaser
     img(src=ASSET_HOST + "/images/singles-bg-640.png" alt="")
 
 block central-teaser
-  h1 Einzeltherapie
-  p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+  h1 Coaching &amp; psychologische Beratung
