add sub title to sublayout for sharing

--- a/templates/sub_layout.pug
+++ b/templates/sub_layout.pug
@@ -19,7 +19,7 @@ block body
       .central-teaser
         block central-teaser
           h1 Paartherapie
-          p.sub-title Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
+        p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
 
   section.content
     include meta_nav
