--- a/templates/cross_link_teaser.pug
+++ b/templates/cross_link_teaser.pug
@@ -15,6 +15,6 @@ mixin teaser-list(teasers)
         when 'family'
           +teaser(teaser, 'Familien', FAMILY_HOST)
         when 'single'
-          +teaser(teaser, 'Singles', SINGLES_HOST)
+          +teaser(teaser, 'Einzelpersonen', SINGLES_HOST)
         when 'corporations'
-          +teaser(teaser, 'Organisationen', '#')
+          +teaser(teaser, 'Fachkräfte', '#')
